--- a/Paper/Course_work_Garmider.tex
+++ b/Paper/Course_work_Garmider.tex
@@ -48,17 +48,12 @@
 \begin{center}
 	\textbf{ПРАВИТЕЛЬСТВО РОССИЙСКОЙ ФЕДЕРАЦИИ}\\
 	\vspace{2ex}
-	\textbf{Федеральное государственное автономное\\ образовательное учреждение высшего образования}
+	\textbf{Федеральное государственное автономное образовательное учреждение \\ высшего образования Национальный исследовательский университет \\ <<Высшая школа экономики>>}
 	
-	\vspace{2ex}
-	
-	\textbf{Национальный исследовательский университет \\ <<Высшая школа экономики>>}
 	
 	\vspace{8ex}
-	\begin{flushright}
-		Факультет экономических наук\\
-		Образовательная программа <<Экономика>>
-	\end{flushright}
+	
+	\textbf{Факультет компьютерных наук}
 \end{center}
 \vspace{9ex}
 
@@ -67,12 +62,18 @@
 	}}
 	\vspace{1ex}
 	
-	На тему <<Вариация алгоритма кросс-валидации со взвешиванием наблюдений>>
+	\underline{БАЙЕСОВСКИЙ ПОДХОД ДЛЯ АНАЛИЗА ДТП} \\
+	\underline{BAYESIAN APPROACH TO CAR ACCIDENTS ANALYSIS}\\
+	\vspace{1.5ex}
+	
+	по направлению подготовки \underline{01.04.02 Прикладная математика и информатика} \\
+	образовательная программа \underline{<<Науки о Данных>>}
+	
 \end{center}
 \vspace{1ex}
 \begin{flushright}
 	\noindent
-	Студент группы БЭК161\\Гармидер Петр Александрович\\
+	Студент группы АИД-Б20:\\Гармидер Петр Александрович\\
 	\vspace{13ex}
 	Научный руководитель:\\
 	Борис Демешев
@@ -90,6 +91,15 @@
 \tableofcontents
 
 \newpage
+
+\section{Введение}
+\subsection{Актуальность в РФ} 
+Транспорт является важной экономической и социальной составляющей жизни населения. Безопасность и эффективность транспортного передвижения непосредственно влияют на качество жизни. Пусть юридически, дороги могут находиться не только в государственной собственности, но и принадлежать частным, юридическим лицам, но по факту за качество большей части дорог отвечает государство. Притом, у государства есть множество вариантов воздействия на дорожное движение: качество и расположение построенных дорог, инфраструктура прилагаемая к дорогам, устанавливаемые скоростные режими и т.д.  
+
+
+\newpage
+\bibliographystyle{utf8gost705u}  %% стилевой файл для оформления по ГОСТу
+\bibliography{biblio}     %% имя библиографической базы (bib-файла) 
 
 
 
