--- a/Paper/biblio.bib
+++ b/Paper/biblio.bib
@@ -8,3 +8,67 @@
 	year={2018},
 	publisher={ИП Шелистов Денис Александрович (Издательский центр" Quantum")}
 }
+
+@article{ivliev_econ_stat_analysis,
+title={Экономико-статистичекий анализ дорожной ситуации в российской Федерации},
+author={Ивлиев, Михаил Игоревич and Черемисина, Наталия Валентиновна},
+journal={Социально-экономические явления и процессы},
+volume={9},
+number={7},
+year={2014},
+publisher={Федеральное государственное бюджетное образовательное учреждение высшего~…}
+}
+
+@article{klachkiva2020analiz,
+	title={АНАЛИЗ СТАТИСТИКИ ДТП В РОССИЙСКОЙ ФЕДЕРАЦИИ},
+	author={Клачкова, АВ and Семёнова, ЕД},
+	journal={Инновационная наука},
+	number={12},
+	year={2020},
+	publisher={Общество с ограниченной ответственностью {\guillemotleft}Аэтерна{\guillemotright}}
+}
+
+@online{rbkNews,
+	author = {Михаил Котляр, Иван Ткачёв},
+	editor = {РБК Медиа},
+	title = {Локдаун 2020 года почти не повлиял на смертность в автоавариях},
+	date = {13.06.2021},
+	url = {https://www.rbc.ru/society/13/06/2021/60c4106a9a7947862635eed4},
+	OPTsubtitle = {subtitle},
+	OPTtitleaddon = {titleaddon},
+	OPTlanguage = {language},
+	OPTversion = {version},
+	OPTnote = {note},
+	organization = {РБК},
+	OPTdate = {13},
+	OPTmonth = {06},
+	OPTyear = {2021},
+	OPTaddendum = {addendum},
+	OPTpubstate = {pubstate},
+	OPTurldate = {urldate},
+}
+
+@article{kuzmenko2020analysis,
+	title={Анализ данных для прогнозирования вероятности дорожно-транспортных происшествий с участием пешеходов},
+	author={Кузьменко, ЕА and Донченко, ДС and Рагозин, ВО},
+	journal={Инженерный вестник Дона},
+	number={6 (66)},
+	year={2020},
+	publisher={Федеральное государственное автономное образовательное учреждение высшего~…}
+}
+
+@article{konyuhov2015analysis,
+	title={Анализ социологических аспектов дорожно-транспортных происшествий на дорогах России методами математической статистики},
+	author={Конюхов, ВГ and Олейник, АВ and Конюхова, ГП and Панов, НН and Зеленов, ВВ},
+	journal={Редакционная коллегия: МЮ Ростовцева, кандидат педагогических наук, профессор; Новикова ЛА, заведующая кафедрой теории и методики гимнастики},
+	pages={170},
+	year={2015}
+}
+
+
+@book{elvik2007state,
+	title={State-of-the-art approaches to road accident black spot management and safety analysis of road networks},
+	author={Elvik, Rune},
+	year={2007},
+	publisher={Transport{\o}konomisk institutt Oslo}
+}
