--- a/Paper/Course_work_Garmider.tex
+++ b/Paper/Course_work_Garmider.tex
@@ -114,7 +114,7 @@
 	\item наезд на пешехода
 \end{itemize}
 
-Каждая вышеперечисленная причина в идеале требует отдельного анализа. Достаточно легко поверить, что не существует единого правила, которое способно ослабить риск каждого ДТП, однако верхнеуровневый анализ позволит понять некоторые самые <<проблемные>> места работа над которыми даст максимальный эффект.
+Каждая вышеперечисленная причина в идеале требует отдельного анализа. Достаточно легко поверить, что не существует единого правила, которое способно ослабить риск каждого ДТП, однако верхнеуровневый анализ позволит понять некоторые самые <<проблемные>> места, работа над которыми даст максимальный эффект.
 
 Наличие актуальной статистики дорожно-транспортных происшествий, в совокупности с анализом текущей ситуации позволит государству своевременно корректировать меры и действия в рамках принятой стратегии. 
 
@@ -123,16 +123,92 @@
 
 В \cite{ivliev_econ_stat_analysis} авторы рассматривают дорожную ситуацию на верхнем уровне, оперируя федеральными округами и областями. Авторы подмечают важность плотности дорог (площадь на 1000 км территории). Наблюдается рост этого показателя во всей Российской Федерации, однако данный рост тяжело наблюдать оперируя отдельными федеральными округами. Из работы также можно понять, что в недалеком прошлом был небольшой ежегодный рост введения дорог с твердым покрытием. Авторы подмечают, что качество дорог является важный фактором не только для снижения количества, но и для степени тяжести ДТП. На уровень транспортных происшествий также влияет количество автомобилей. По данным на конец 2013 года в Российской Федерации насчитывалось порядка 53 321 тысяч транспортных средств, при росте в $17.5\%$ по отношению к прошлому году. Для того, чтобы оценить влияние количества транспортных средств на количество случае ДТП в статье строится регрессионная модель из которой следует, что это влияние действительно есть. Более того, количество автомобилей объясняют порядка $90\%$ дисперсии случаев ДТП по разным регионам. Статья в целом посвящена итогам Федеральной целевой программы по повышению безопасности дорожного движения в 2006---2012 гг. Авторы отмечают успех данной программы, но заявляют, что ситуация на дорогах все еще требует пристального внимания со стороны правительства.
 
-Другая, достаточно свежая статья \cite{klachkiva2020analiz} посвящена анализу статистики ДТП на уровне всей страны. Авторы также отмечают бурный рост количества автомобилей зарегистрированных в РФ, что конечно ведет к дополнительным транспортным проблемам: снижение скорости сообщения из-за большей дорожной загрузки, увеличение выбросов вредных веществ, а также перерасход топлива. В своей работе, авторы делают разрез пострадавших в ДТП по годам и подмечают, что не смотря на то, что общее количество ДТП и пострадавших в них уменьшается за последние 5 лет, существует рост количества пострадавших/погибших в ДТП детей в возрасте до 16 лет. Также авторы подмечают, что самая частая группа пострадавших в ДТП --- это люди с активным образом жизни от 21 до 40 лет. Такая ситуация, по словам авторов негативно сказывается на возрастную пирамиду населения и другие демографические показатели РФ. Авторы в своей работе отмечают снизившееся количество случаев ДТП в первую половину 2020 года, объясняя это снизившимся числом автомобилей на дороге. Однако, совсем недавно в \cite{rbkNews} отметили, что этот эффект был временным и в итоге локдаун 2020-го года никак не повлиял на количество фатальных случаев в ДТП. Как отмечают в ГИБДД, несмотря на сокращение случаев в ДТП, смертность в них, как и ситуация с вождением стала <<нестабильной>> \footnote{Стоит понимать, что данные могут разнится. В Российской Федерации актуальную информацию о случаях ДТП собирают два ведомства --- Госавтоинспеция и Росстат.}. По мнению службы, водители вновь севшие за руль после локдауна растеряли свои навыки вождения, а некоторые --- и чувство опасности, подавшись эйфории после ослабления некоторых ограничений.
+Другая, достаточно свежая статья \cite{klachkiva2020analiz} посвящена анализу статистики ДТП на уровне всей страны. Авторы также отмечают бурный рост количества автомобилей зарегистрированных в РФ, что конечно ведет к дополнительным транспортным проблемам: снижение скорости сообщения из-за большей дорожной загрузки, увеличение выбросов вредных веществ, а также перерасход топлива. В своей работе, авторы делают разрез пострадавших в ДТП по годам и подмечают, что не смотря на то, что общее количество ДТП и пострадавших в них уменьшается за последние 5 лет, существует рост количества пострадавших/погибших в ДТП детей в возрасте до 16 лет. Также авторы подмечают, что самая частая группа пострадавших в ДТП --- это люди с активным образом жизни от 21 до 40 лет. Такая ситуация, по словам авторов негативно сказывается на возрастную пирамиду населения и другие демографические показатели РФ. Авторы в своей работе отмечают снизившееся количество случаев ДТП в первую половину 2020 года, объясняя это снизившимся числом автомобилей на дороге. Однако, совсем недавно в \cite{rbkNews} отметили, что этот эффект был временным и в итоге локдаун 2020-го года никак не повлиял на количество фатальных случаев в ДТП. Как отмечают в ГИБДД, несмотря на сокращение случаев в ДТП, смертность в них, как и ситуация с вождением стала <<нестабильной>>\footnote{Стоит понимать, что данные могут разнится. В Российской Федерации актуальную информацию о случаях ДТП собирают два ведомства --- Госавтоинспеция и Росстат.}. По мнению службы, водители вновь севшие за руль после локдауна растеряли свои навыки вождения, а некоторые --- и чувство опасности, подавшись эйфории после ослабления некоторых ограничений.
 
-В другой работе \cite{kuzmenko2020analysis} затрагивался вопрос прогнозирования вероятности ДТП с участием пешеходов. Авторы располагали похожими данным, что использовались и в данном исследовании --- карточки ДТП скачанные из сайта stat.gibdd.ru. Авторы описывают методологию сбора и построения витрины данных для последующей подачи на вход моделям машинного обучения. В работе выделяются основные факторы, которые могут иметь предсказательную силу, а также тонкостям сбора подобных данных. В качестве прогнозной модели авторы советуют использовать реализацию градиентного бустинга над деревьями Catboost --- библиотека с открытым доступом, разработанный компанией Яндекс. В статье рассказываются преимущества над существующими реализациями, а также даются рекомендации по настройке параметров модели. Авторы подчеркивают <<несовершенство>> данных в карточках ДТП, которые могут быть результатом человеческих ошибок. В качестве основной мотивации для создания подобной модели, выделяется высокая доля наездов на пешеходов, где наблюдается наивысшее среднее количество пострадавших в ДТП. Остается за кадром построение модели, как и постановка задачи.
+В другой работе \cite{kuzmenko2020analysis} затрагивался вопрос прогнозирования вероятности ДТП с участием пешеходов. Авторы располагали похожими данным, что использовались и в данном исследовании --- карточки ДТП скачанные из сайта stat.gibdd.ru. Авторы описывают методологию сбора и построения витрины данных для последующей подачи на вход моделям машинного обучения. В работе выделяются основные факторы, которые могут иметь предсказательную силу, а также тонкостям сбора подобных данных. В качестве прогнозной модели авторы советуют использовать реализацию градиентного бустинга над деревьями Catboost --- библиотека с открытым доступом, разработанный компанией Яндекс. В статье рассказываются преимущества над существующими реализациями, а также даются рекомендации по настройке параметров модели. Авторы подчеркивают <<несовершенство>> данных в карточках ДТП, которые могут быть результатом человеческих ошибок. В качестве основной мотивации для создания подобной модели, выделяется высокая доля наездов на пешеходов, где наблюдается наивысшее среднее количество пострадавших в ДТП. Остается за кадром построение модели, как и формальная постановка задачи.
 
 В другой работе \cite{konyuhov2015analysis} производится анализ динамики пострадавших в ДТП. На момент исследования данных наблюдалось снижение количества пострадавших и погибших на существенных статистически значимых показателях. Авторы также приводят некоторую сводку информации по ДТП, в частности заявляя, что самыми опасными часами являются вечерние --- 30-35 \% ДТП случаются именно в этот промежуток времени. Подтверждающий эту статистику график можно увидеть в разделе обзора данных. 
 
-В довольно ранней работе \cite{elvik2007state} рассматривают основные практики 2000-ных годов для выявления особо опасных участков дорог. На тот момент, Байесовские методы являлись основным подходом для этой задачи. Строилась некоторая модель, которая каждому участку дороги ставила в соответствие распределение количества аварий, травм, крупных происшествий и др. Полученные оценки распределений сопоставлялись с фактическими данными, после чего аномально высокие значения для распределений трактовались как проблемные места, требующие особого внимания. Ряд стран использовал схожую методологию с поправкой на вид модели, критические пороги для объявление участка дороги проблемным и подобные технические характеристики. Такой подход позволял выявлять подозрительные участки дороги, на которые впоследствии отправлялись специалисты для выявления возможной причины <<опасности>> дороги и её устранения. В работе рассматривают разные спецификации модели, а также особенности практического влияния результатов. Как говорится в статье, на тот момент Байесовский подход являлся state-of-the-art методом для подобного рода задач.
+В довольно ранней работе \cite{elvik2007state} рассматривают основные практики 2000-ных годов для выявления особо опасных участков дорог. На тот момент, байесовские методы являлись основным подходом для этой задачи. Строилась некоторая модель, которая каждому участку дороги ставила в соответствие распределение количества аварий, травм, крупных происшествий и др. Полученные оценки распределений сопоставлялись с фактическими данными, после чего аномально высокие значения для выведенных распределений трактовались как проблемные места, требующие особого внимания. Ряд стран использовал схожую методологию с поправкой на вид модели, критические пороги для объявление участка дороги проблемным и подобные технические характеристики. Такой подход позволял выявлять подозрительные участки дороги, на которые впоследствии отправлялись специалисты для выявления возможной причины <<опасности>> участка дороги и её устранения. В работе рассматривают разные спецификации модели, а также особенности практического влияния результатов. Как говорится в статье, на тот момент байесовский подход являлся state-of-the-art методом для подобного рода задач.
 
 
 \subsection{Методология и цели}
+Основной целью данной работы не является построение особо сложных моделей с использованием байесовской методологии. Автор не является специалистом в столь широкой области, но делает всё для того чтобы поближе познакомиться со столь интересным методом обработки и анализа информации. Данная работа --- хороший тренажер чтобы изучить основные концепции байесовского подхода и его отличия от классических статистических методов. Помимо моделирования, ценность работы заключается в обзоре и анализе располагаемых данных: поиск аномалий, выявление закономерностей, распознание общей динамики и тому подобное. Этой части в работе будет посвящена отдельная секция, большую часть которой будут занимать графики.
+
+Работа рассматривается, как учебное упражнение, в связи с чем её результаты не рекомендуются к использованию для принятия каких-либо практических решений. 
+
+Дополнительную ценность работе дает тот факт, что не существует популярных статей посвященных анализу дорожно-транспортных происшествий основанный на карточках ДТП с сайта Госавтоинспекции. 
+
+Для количественного анализа будут использованы агрегированные данные по дням ДТП для дальнейшего выявления влияния различных погодных или сезонных условий на количество происходящих происшествий в отдельно выбранный день. В качестве модели будет использована классическая байесовская регрессия и представлены вероятностные интервалы для полученных апостериорных распределений коэффициентов на основе которых будут сделаны качественные выводы.
+
+Совершенно очевидно, что не стоит ожидать каких-либо принципиально новых открытий сделанных байесовским подходом в сравнении с классическими частотными методами. Более того, достаточно известный факт, что задача байесовской регрессии, при определенных предпосылках на распределения неизвестных параметров, является одной из интерпретаций стандартных таких техник регуляризаций, как Lasso и Ridge \cite{haitovsky1980generalized}. Поэтому, еще раз подчеркивается, что нет особых явных указателей на то, что в рассматриваемой задачае байесовский подход является явно лучшим вариантом в сравнении с классическим частотным.
+
+\section{Данные}
+\subsection{Обзор}
+Как уже говорилось ранее, не существует актуальных источников по дорожно-транспортным происшествиям в которых данные хранились бы в структурированном виде с возможностью дальнейшей обработки. Открытые для общего пользования ресурсы предоставляют доступ к слабоструктурированным данным за какой-то короткий промежуток на котором тяжело построить дальнейший анализ. Имеющиеся данные были получены благодаря Елене Никитиной, написавшей и выложившей в открытый доступ скрипт позволяющий получить данные по карточкам ДТП за любой доступный период в разрезе по регионам в машиночитаемом формате \cite{eleneGithub}. Непосредственным поставщиком данных является сайт stat.gibdd.ru --- официальный сайт Госавтоинспекции.
+
+При помощи скрипты были собранные данные по дорожно-транспортным происшествиям в г. Москва за промежуток с 2015 по 2020 года. Одно наблюдение --- карточка ДТП в которой указана информация заполненная инспектором ГИБДД приехавшим на место происшествия. Основные поля карточки ДТП включают в себя: идентификационный номер, дату, время, место происшествия, количество погибших и пострадавших в ДТП, информация по транспортным средствам, погодные условия, состояние покрытия дороги, данные об освещенности места ДТП, приблизительные координаты и некоторая обезличенная информация о погибших или раненных в инциденте. Стоит понимать, что каждый кусок данных уязвим к человеческим ошибкам и подвержен оценочному суждению, однако несет в себе какую-то информацию доступную для анализа. Почти все описанные поля принимают либо целочисленные значения, либо категориальные.
+
+Также в открытом доступе удалось найти статистику по температуре в Москва\footnote{В аэропорту Шереметьево. Предполагается, что температура различалась не сильно.} в разрезе каждого дня. 
+
+\subsection{Графический анализ данных}
+
+\begin{figure}[h]
+	\center{\includegraphics[scale=0.6]{img/dtp_count_years}}
+	\caption{Общее количество случаев ДТП (г. Москва)}
+\end{figure}
+
+В данной секции будет сделан иллюстративный обзор данных в попытке запечатлеть некие закономерности и паттерны которые удалось выявить и изобразить на данных. 
+
+На рис. 2 изображено количество всех случаев ДТП в г. Москва в разрезе по годам. Как видно из графика, начиная с 2016 года, строгого тренда не наблюдается. Явно выделяется результат введения ограничений в связи с COVID-19 в 2020 году, который привел к уменьшению дорожного поток, а вследствие чего к снижению вероятности возникновения ДТП. К сожалению, как уже говорилась ранее, данное наблюдение не согласуется с \cite{rbkNews}, однако может быть объяснено разными источниками данных. 
+
+\begin{figure}[h]
+	\center{\includegraphics[scale=0.55]{img/ran_pog_years}}
+	\caption{Количество раненных/погибших (г. Москва)}
+\end{figure}
+
+Также интересно посмотреть на динамику по пострадавшим в ДТП по годам. Можно увидеть, что количество раненных примерно совпадает с динамикой общего количества случаев ДТП (рис. 2). Однако количество погибших в ДТП падает из года в год. Невооруженным глазом видно, что это падение достигается не за счёт снижения динамики случаев ДТП. Однако, чтобы в этом точно убедиться можно посмотреть на рис. 4. Видим, что отношение количества раненных в ДТП к общему количеству зарегистрированных случаев примерно одинаковое от года к году. Однако, наблюдается снижение отношения погибших к количеству случаев на протяжении всего рассматриваемого периода. Однако спад сходит на нет в 2020 году, что может быть объяснено неосторожностью вождения после отмены локдауна \cite{rbkNews}. 
+
+\begin{figure}[h]
+	\center{\includegraphics[scale=0.55]{img/ran_pog_ratios_years}}
+	\caption{Отношение раненных/погибших к общему количеству ДТП (г. Москва)}
+\end{figure}
+
+
+Для общего контекста полезно понимать распределение погибших/раненных в ДТП за рассматриваемый период. Как и ожидалось, в случившимся ДТП в большинстве своем существует минимум один пострадавший. Любой сдвиг из этой точки большая редкость. С распределением погибших ситуация схожая с разницей в том, что мода количества погибших в ДТП находится в нуле. Тем не менее, данная картина не должна успокаивать ибо это достаточно высокие цифры в перерасчете на количество населения. Есть некоторая статистика, которая показывает что в некотором наборе стран Россия занимает второе место по количеству погибших в ДТП на 100 тысяч населения \cite{tass_rating}. 
+
+\begin{figure}[h]
+	\center{\includegraphics[scale=0.55]{img/ran_pog_hist}}
+	\caption{Гистограммы раненных/погибших (г. Москва)}
+\end{figure}
+
+Для лучшего понимания дорожной ситуации можно также обратиться к похожим данным в разрезе по месяцам. На рис. 6 наблюдается явная закономерность показывающая, что количество ДТП, как и их тяжесть усугубляется к концу года. Причем количество раненных в ДТП резко увеличивается начиная с августа, что может быть объяснено через ухудшающаяся погоду к концу года, что приводит к ухудшению управляемости транспортного средства. Резкое падение в января можно связать с низкой дорожной активностью в этот месяц. Также начало года выпадает на пик снежного сезона. Погодные условия способствуют снижению скоростного режима, что снижает риск и степень тяжести потенциальных ДТП.
+
+\begin{figure}[h]
+	\center{\includegraphics[scale=0.55]{img/ran_pog_month}}
+	\caption{Динамика раненных/погибших по месяцам (г. Москва)}
+\end{figure}
+
+Для подробного рассмотрения вопроса о связи природных явлений и случаев ДТП полезно исследовать рис. 7. На данном графике отображена динамика количества погибших и раненных при ДТП в контексте средней температуры воздуха в рассматриваемый месяц. К сожалению обнаруживаем для себя, что явных закономерностей в какую-либо сторону обнаружить не удалось. Если всмотреться, то можно заметить, что данный график лишь повторяет динамику <<конца-начала>> года. Это дает основание считать, что погодные условия не являются важным драйвером к снижению уровня ДТП. Главным источником возможно является повышение активности на участках дорог в связи с наступающими новогодними праздниками в конце года и дальнейшее снижение активности водителей в связи с праздничными каникулами. 
+
+\begin{figure}[h]
+	\center{\includegraphics[scale=0.55]{img/ran_pog_temperature}}
+	\caption{Динамика раненных/погибших в связке с средней температурой за месяц (г. Москва)}
+\end{figure}
+
+От месячного периода можно спустить на одну ступень ниже к разбиению по дням недели (см рис. 8). Можно сразу заметить, что выходные дни являются самыми опасными с точки зрения количества потенциальных в таких ДТП. Важно заметить, что пятница является самым популярным днем возникновения ДТП, однако остается <<безопасным>> в рамках среднего количества погибших. Возникает гипотеза о том, что большая доля жертв ДТП в субботу приходится на ночь с пятницы. Люди отдохнув в последний рабочий день, возможно в нетрезвом состоянии попадают в летальные ДТП. Это также описывает аномально высокую летальность субботы, как и низкую в пятницу. Воскресенье также является неблагоприятным днем, по всей видимости по тем же причинам, что и суббота. С высокой долей вероятности, такую картинку можно наблюдать не во всех регионах, а только в городах с развитым сервисом досуга, которым жители города и желают воспользоваться в свободный от работы день.
+
+
+\begin{figure}[h]
+	\center{\includegraphics[scale=0.45]{img/ran_pog_ratios_weekday}}
+	\caption{Среднее количество раненных и погибших по дням недели (г. Москва)}
+\end{figure}
+
+
+
+
+
+ 
 
 
 
