--- a/Paper/Course_work_Garmider.tex
+++ b/Paper/Course_work_Garmider.tex
@@ -196,13 +196,30 @@
 	\caption{Динамика раненных/погибших в связке с средней температурой за месяц (г. Москва)}
 \end{figure}
 
-От месячного периода можно спустить на одну ступень ниже к разбиению по дням недели (см рис. 8). Можно сразу заметить, что выходные дни являются самыми опасными с точки зрения количества потенциальных в таких ДТП. Важно заметить, что пятница является самым популярным днем возникновения ДТП, однако остается <<безопасным>> в рамках среднего количества погибших. Возникает гипотеза о том, что большая доля жертв ДТП в субботу приходится на ночь с пятницы. Люди отдохнув в последний рабочий день, возможно в нетрезвом состоянии попадают в летальные ДТП. Это также описывает аномально высокую летальность субботы, как и низкую в пятницу. Воскресенье также является неблагоприятным днем, по всей видимости по тем же причинам, что и суббота. С высокой долей вероятности, такую картинку можно наблюдать не во всех регионах, а только в городах с развитым сервисом досуга, которым жители города и желают воспользоваться в свободный от работы день.
+От месячного периода можно спустить на одну ступень ниже к разбиению по дням недели (см рис. 10). Можно сразу заметить, что выходные дни являются самыми опасными с точки зрения количества потенциальных в таких ДТП. Важно заметить, что пятница является самым популярным днем возникновения ДТП, однако остается <<безопасным>> в рамках среднего количества погибших. Возникает гипотеза о том, что большая доля жертв ДТП в субботу приходится на ночь с пятницы. Люди отдохнув в последний рабочий день, возможно в нетрезвом состоянии попадают в летальные ДТП. Это также описывает аномально высокую летальность субботы, как и низкую в пятницу. Воскресенье также является неблагоприятным днем, по всей видимости по тем же причинам, что и суббота. С высокой долей вероятности, такую картинку можно наблюдать не во всех регионах, а только в городах с развитым сервисом досуга, которым жители города и желают воспользоваться в свободный от работы день.
+
+\begin{figure}[h]
+	\center{\includegraphics[scale=0.45]{img/dtp_count_hours}}
+	\caption{Количество ДТП в разрезе часа дня (г. Москва)}
+\end{figure}
+
+Также интересно рассмотреть картину случаев ДТП в разрезе часов дня. Из рис. 8 можно подметить, что пиковые ситуации ДТП это начало и конец рабочего дня, причем ситуация более остро стоит в конец рабочей смены, возможно из-за накопленной в течении дня усталости и потери концентрации. Также довольно интересную картину можно наблюдать в разбиении на погибших и раненных (см. рис 9). На удивление, среднее количество раненных в ДТП почти не меняется от часа к часу, однако картина совершенно другая для летальных случаев. Наблюдаем резкий рост среднего количества погибших в ДТП после 12-ти часов ночи. На мой взгляд это не может быть объяснено освещением, т.к картина совершенно иная в 22-й и 23-й час. Одна из основных гипотез --- это сюжет, когда водитель или пешеход возвращается домой не в здравом рассудке (усталость или алкогольное опьянение). Ситуация явно <<стабилизируется>> в основные часы жизни население. Также возможно, высокая доля погибших в ночное время объясняется в трудностях в своевременном получении медицинских услуг. Конечно же, чтобы более аккуратно ответить на этот вопрос требуются дополнительные данные и отдельное исследование.
+
+\begin{figure}[h]
+	\center{\includegraphics[scale=0.45]{img/ran_pog_mean_hour}}
+	\caption{Среднее количество раненных и погибших по часам дня (г. Москва)}
+\end{figure} 
 
 
 \begin{figure}[h]
 	\center{\includegraphics[scale=0.45]{img/ran_pog_ratios_weekday}}
 	\caption{Среднее количество раненных и погибших по дням недели (г. Москва)}
 \end{figure}
+
+
+
+
+
 
 
 
